fix menu collapsing lag

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,6 @@
 /* header */
 
 /* navbar */
-nav {
-    /* background:#c8eaea; */
-}
-
 @media (min-width: 992px) {
     .navbar {
         flex-flow: column nowrap;
@@ -148,7 +144,7 @@ nav {
 
 .masonry {
     display: grid;
-    grid-gap: 1px;
+    grid-gap: 4px;
     grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
     grid-auto-rows: 0;
 }
